# mappa-proxy

./: .dockerignore  .gitignore  Dockerfile  Makefile  Procfile  README.md  Taskfile.yaml  docker-compose.yml  fly.toml  go.mod  go.sum  main.go  mappa_login.json  mappa_test.go  pyproject.toml  workspace.code-workspace
.github/scripts/: frontend.sh
.github/workflows/: codeql-analysis.yml  go.yml  sonar.yaml
backend/: server.go
backend/app/: appSetup.go  app_setup.go  app_swagger.go
backend/cache/: mappa_cache.go  mappa_cache_test.go
backend/configuration/: config.go
backend/domain/: login_data.go  mappa_enums.go
backend/entities/: associado.go  grupo.go  key_value.go  login.go  mappa_especialidades.go  mappa_progressao.go
backend/http/: httpResponses.go
backend/infra/: connection_string.go  connection_string_test.go  http_get.go  http_post.go  http_request.go  http_request_mock.go  http_request_net_http.go  http_request_net_http_test.go  http_request_test.go  memory_status.go  memory_status_test.go  password_hash.go  ping.go  setup.go
backend/mappa/: mappaRequests.go  mappaService.go  mappaSetup.go  mappa_api.go  mappa_api_conquistas.go  mappa_api_http.go  mappa_api_marcacoes.go  mappa_api_test.go  mappa_service.go  mappa_setup.go  (+5 more)
docs/: docs.go  swagger.json  swagger.yaml
frontend/: README.md  package-lock.json  package.json  quasar.conf.js  update_version.js
jupyter/: associado.py  stats_secao.py
mappa/: logging.go  mappa.go  mappa_controllers.go  mappa_login.go  mappa_stats.go
tg/: publisher.go  workspace.code-workspace
web/: index.html
(+174 files in other folders)
