[tool.poetry]
name = "mappa-proxy"
version = "0.1.0"
description = ""
authors = ["Guionardo <guionardo@gmail.com>"]
readme = "README.md"
packages = [{include = "mappa_proxy"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
pandas = "^2.0.0"
xlsxwriter = "^3.1.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
autopep8 = "^2.0.2"
ipykernel = "^6.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
